* Release Notes for Irvine-01 Flight Software
** 00.05.00
   - cmdd remote command execution framework
   - satcomm encryption configuration